Fix for Edit Task Options dialog cut off when opened from plugin
The Edit Task Options dialog is very small if opened from the cloud
import or dronedb import plugin modal dialogs, this css tweak fixes it
to take up the full height of the window.

--- a/coreplugins/dronedb/public/components/ConfigureNewTaskDialog.scss
+++ b/coreplugins/dronedb/public/components/ConfigureNewTaskDialog.scss
@@ -5,3 +5,9 @@
 .new-task.modal button i {
 	margin-right: 1em;
 }
+
+/* Fix edit dialog when opened from plugin modal dialog */
+.modal-newtask {
+  min-height: 100%;
+}
+
